--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,13 +118,24 @@ jobs:
 
     - name: Wait for services to be healthy
       run: |
-        sleep 30
+        echo "Waiting for services to start..."
+        sleep 45
         docker-compose ps
+        echo "Checking database..."
+        docker-compose exec -T postgres pg_isready -U shop_user || exit 1
+        echo "Checking Redis..."
+        docker-compose exec -T redis redis-cli ping || exit 1
 
     - name: Check service health
       run: |
-        curl -f http://localhost:8000/health/ || exit 1
-        curl -f http://localhost:3000/ || exit 1
+        # Проверка API Gateway
+        curl -f http://localhost:8000/api/health/ || echo "API Gateway health check failed"
+        # Проверка Frontend
+        curl -f http://localhost:3000/ || echo "Frontend check failed"
+        # Проверка микросервисов
+        docker-compose exec -T user-service python manage.py check || exit 1
+        docker-compose exec -T product-service python manage.py check || exit 1
+        docker-compose exec -T cart-service python manage.py check || exit 1
 
     - name: Show logs on failure
       if: failure()
