fix: Add security-events permission and update CodeQL Action to v4
- Added required permissions for security-scan job:
  - security-events: write (for uploading SARIF results)
  - contents: read
  - actions: read
- Updated github/codeql-action from v3 to v4
- Fixes 'Resource not accessible by integration' error

This allows Trivy scan results to be uploaded to GitHub Security tab

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -151,6 +151,10 @@ jobs:
     name: Security Scan
     runs-on: ubuntu-latest
     needs: build-and-push
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
     
     strategy:
       matrix:
@@ -173,7 +177,7 @@ jobs:
         output: 'trivy-results-${{ matrix.service }}.sarif'
 
     - name: Upload Trivy results to GitHub Security
-      uses: github/codeql-action/upload-sarif@v3
+      uses: github/codeql-action/upload-sarif@v4
       with:
         sarif_file: 'trivy-results-${{ matrix.service }}.sarif'
         category: ${{ matrix.service }}
