fix: Correct docker-compose.yml YAML structure
- Fixed broken depends_on block in user-service
- Fixed broken depends_on block in currency-service
- Changed user-service DATABASE_NAME from 'discount_db' to 'user_db'
- Removed malformed '5432_healthy' value

All services now have proper YAML structure with depends_on as separate block

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,11 +48,14 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - DJANGO_SETTINGS_MODULE=config.settings
-      - DATABASE_NAME=discount_db
+      - DATABASE_NAME=user_db
       - DATABASE_USER=shop_user
       - DATABASE_PASSWORD=shop_password
       - DATABASE_HOST=postgres
-      - DATABASE_PORT=5432_healthy
+      - DATABASE_PORT=5432
+    depends_on:
+      redis:
+        condition: service_healthy
       postgres:
         condition: service_healthy
     networks:
@@ -223,6 +226,7 @@ services:
       - DATABASE_PASSWORD=shop_password
       - DATABASE_HOST=postgres
       - DATABASE_PORT=5432
+    depends_on:
       redis:
         condition: service_healthy
       postgres:
