--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,215 +1,138 @@
-name: Build and Deploy
+name: Tests & Build
 
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
   workflow_dispatch:
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
-  build-and-push:
-    name: Build and Push Docker Images
+  tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_USER: shop_user
+          POSTGRES_PASSWORD: shop_password
+          POSTGRES_DB: test_db
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+      redis:
+        image: redis:7-alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Run User Service Tests
+      working-directory: ./services/user-service
+      env:
+        DATABASE_URL: postgresql://shop_user:shop_password@localhost:5432/test_db
+        REDIS_URL: redis://localhost:6379/0
+      run: |
+        pip install -r requirements.txt
+        python manage.py migrate
+        python manage.py test apps.users.tests --verbosity=2
+
+    - name: Run Product Service Tests
+      working-directory: ./services/product-service
+      env:
+        DATABASE_URL: postgresql://shop_user:shop_password@localhost:5432/test_db
+        REDIS_URL: redis://localhost:6379/0
+      run: |
+        pip install -r requirements.txt
+        python manage.py migrate
+        python manage.py test apps.products.tests --verbosity=2
+
+    - name: Run Cart Service Tests
+      working-directory: ./services/cart-service
+      env:
+        DATABASE_URL: postgresql://shop_user:shop_password@localhost:5432/test_db
+        REDIS_URL: redis://localhost:6379/0
+      run: |
+        pip install -r requirements.txt
+        python manage.py migrate
+        python manage.py test apps.cart.tests --verbosity=2
+
+    - name: Run Order Service Tests
+      working-directory: ./services/order-service
+      env:
+        DATABASE_URL: postgresql://shop_user:shop_password@localhost:5432/test_db
+        REDIS_URL: redis://localhost:6379/0
+      run: |
+        pip install -r requirements.txt
+        python manage.py migrate
+        python manage.py test apps.orders.tests --verbosity=2
+
+    - name: Run Currency Service Tests
+      working-directory: ./services/currency-service
+      env:
+        DATABASE_URL: postgresql://shop_user:shop_password@localhost:5432/test_db
+        REDIS_URL: redis://localhost:6379/0
+      run: |
+        pip install -r requirements.txt
+        python manage.py migrate
+        python manage.py test apps.currency.tests --verbosity=2
+
+    - name: Run Discount Service Tests
+      working-directory: ./services/discount-service
+      env:
+        DATABASE_URL: postgresql://shop_user:shop_password@localhost:5432/test_db
+        REDIS_URL: redis://localhost:6379/0
+      run: |
+        pip install -r requirements.txt
+        python manage.py migrate
+        python manage.py test apps.discounts.tests --verbosity=2
+
+  build:
+    name: Build Docker Images
+    runs-on: ubuntu-latest
+    needs: tests
+    if: github.event_name == 'push'
     permissions:
       contents: read
       packages: write
-    
-    strategy:
-      matrix:
-        service:
-          - name: user-service
-            context: ./services/user-service
-          - name: product-service
-            context: ./services/product-service
-          - name: cart-service
-            context: ./services/cart-service
-          - name: order-service
-            context: ./services/order-service
-          - name: currency-service
-            context: ./services/currency-service
-          - name: discount-service
-            context: ./services/discount-service
-          - name: api-gateway
-            context: ./api-gateway
-          - name: frontend
-            context: ./frontend
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Log in to Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.service.name }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build and push Docker image
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push images
       uses: docker/build-push-action@v5
       with:
-        context: ${{ matrix.service.context }}
+        context: .
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        tags: ghcr.io/${{ github.repository }}:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
-
-  test-deployment:
-    name: Test Deployment with Docker Compose
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.event_name == 'pull_request'
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Create .env file
-      run: |
-        cat > .env << EOF
-        # Database
-        POSTGRES_USER=shop_user
-        POSTGRES_PASSWORD=shop_password
-        POSTGRES_DB=shop_db
-        
-        # Redis
-        REDIS_HOST=redis
-        REDIS_PORT=6379
-        
-        # Services URLs
-        USER_SERVICE_URL=http://user-service:8004
-        PRODUCT_SERVICE_URL=http://product-service:8001
-        CART_SERVICE_URL=http://cart-service:8002
-        ORDER_SERVICE_URL=http://order-service:8003
-        CURRENCY_SERVICE_URL=http://currency-service:8006
-        
-        # Django
-        SECRET_KEY=test-secret-key-for-deployment
-        DEBUG=False
-        ALLOWED_HOSTS=localhost,127.0.0.1
-        
-        # JWT
-        JWT_SECRET_KEY=test-jwt-secret-key
-        EOF
-
-    - name: Start services
-      run: |
-        docker-compose up -d
-
-    - name: Wait for services to be healthy
-      run: |
-        echo "Waiting for services to start..."
-        sleep 45
-        docker-compose ps
-        echo "Checking database..."
-        docker-compose exec -T postgres pg_isready -U shop_user || exit 1
-        echo "Checking Redis..."
-        docker-compose exec -T redis redis-cli ping || exit 1
-
-    - name: Check service health
-      run: |
-        # Проверка API Gateway
-        curl -f http://localhost:8000/api/health/ || echo "API Gateway health check failed"
-        # Проверка Frontend
-        curl -f http://localhost:3000/ || echo "Frontend check failed"
-        # Проверка микросервисов
-        docker-compose exec -T user-service python manage.py check || exit 1
-        docker-compose exec -T product-service python manage.py check || exit 1
-        docker-compose exec -T cart-service python manage.py check || exit 1
-
-    - name: Show logs on failure
-      if: failure()
-      run: |
-        docker-compose logs
-
-    - name: Cleanup
-      if: always()
-      run: |
-        docker-compose down -v
-
-  security-scan:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    permissions:
-      contents: read
-      security-events: write
-      actions: read
-    
-    strategy:
-      matrix:
-        service:
-          - user-service
-          - product-service
-          - cart-service
-          - order-service
-          - currency-service
-          - discount-service
-          - api-gateway
-          - frontend
-
-    steps:
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ matrix.service }}:latest
-        format: 'sarif'
-        output: 'trivy-results-${{ matrix.service }}.sarif'
-
-    - name: Upload Trivy results to GitHub Security
-      uses: github/codeql-action/upload-sarif@v4
-      with:
-        sarif_file: 'trivy-results-${{ matrix.service }}.sarif'
-        category: ${{ matrix.service }}
-
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [build-and-push, security-scan]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    environment:
-      name: production
-      url: https://your-domain.com
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Deploy to production server
-      # Uncomment and configure secrets when ready for production deployment
-      # env:
-      #   DEPLOY_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
-      #   DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-      #   DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
-      run: |
-        # This is a placeholder for your actual deployment script
-        # You would typically SSH into your server and run deployment commands
-        echo "Deploying to production..."
-        # Example:
-        # ssh -i $DEPLOY_KEY $DEPLOY_USER@$DEPLOY_HOST 'cd /app && docker-compose pull && docker-compose up -d'
-
-    - name: Notify deployment status
-      if: always()
-      run: |
-        echo "Deployment completed with status: ${{ job.status }}"
-        # You can add Slack, Discord, or email notifications here
